force-app/main/default/objects/Sentry_Connector_Delivery__c/Sentry_Connector_Delivery__c.object-meta.xml
<CustomObject>
    <description>Delivery tracking, retries, and health state for outbound SIEM connector dispatch.</description>
    <label>Sentry Connector Delivery</label>
    <nameField>
        <displayFormat>SCD-{000000}</displayFormat>
        <label>Sentry Connector Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sentry Connector Deliveries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>