force-app/main/default/objects/Sentry_Connector_Delivery__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <label>Alert</label>
    <referenceTo>Sentry_Alert__c</referenceTo>
    <relationshipLabel>Connector Deliveries</relationshipLabel>
    <relationshipName>ConnectorDeliveries</relationshipName>
    <type>Lookup</type>
</CustomField>