force-app/main/default/objects/Sentry_Connector_Delivery__c/fields/Connector__c.field-meta.xml
<CustomField>
    <fullName>Connector__c</fullName>
    <label>Connector</label>
    <length>80</length>
    <type>Text</type>
</CustomField>