force-app/main/default/objects/Sentry_Connector_Delivery__c/fields/Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Status__c</fullName>
    <label>Health Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>