force-app/main/default/objects/Sentry_Connector_Delivery__c/fields/Target_Reference__c.field-meta.xml
<CustomField>
    <fullName>Target_Reference__c</fullName>
    <label>Target Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>